@@ -8,6 +8,8 @@ Changes in 3.0.1
 * FIX: afpd: Fixes open file handle refcounting bug which was reported as
        being unable to play movies off a Netatalk AFP share.
        Bug ID 3559783.
+* FIX: afpd: Fix a possible data corruption when reading from and writing
+       to the server simultaniously under load
 * FIX: Fix possible alignment violations due to bad casts
 * FIX: dbd: Fix logging
 * FIX: apple_dump: Extended Attributes AppleDouble support for *BSD
